--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,9 +557,9 @@ section {
   color: #fff;
 }
 
-.interests .icon-box:hover {
+/*--.interests .icon-box:hover {
   background: rgba(0, 0, 0, 0.5);
-}
+}--*/
 
 
 
